Fix steps from tutorial

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,8 @@ button {
 
 .app-comic,
 .app-comic > div {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: black;
 }
 
