--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -9,6 +9,10 @@
     #506036 100%
   );
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   .main-title-img {
     width: 92%;
     max-width: 340px;
