--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -2,62 +2,55 @@
 
 .app-bar {
   width: 100%;
-  height: 72px;
+  height: 48px;
+
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
 
-  // @media screen and (max-width: $md-down) {
-  //   height: 64px;
-  // }
-}
-
-.app-bar-reveal-area {
-  width: 100%;
-  height: 72px;
-}
-
-.app-bar-content {
-  width: 94%;
-  height: 72px;
-  padding: 0 3%;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  position: absolute;
-
-  background: linear-gradient(
-    180deg,
-    #000000 0%,
-    rgba(0, 0, 0, 0) 116.67%
-  );
-  transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-
-  // @media screen and (max-width: $md-down) {
-  //   background: linear-gradient(
-  //     180deg,
-  //     rgba(0, 0, 0, 0.8) 0%,
-  //     #000000 116.67%
-  //   );
-  //   height: 64px;
-  // }
-
-  // @media screen and (max-width: $sm-down) {
-  //   height: 44px;
-  // }
-
-  &.hidden {
-    top: -72px;
+  @media (min-width: $lg-min) {
+    height: 72px;
   }
 
-  &.shown {
-    top: 0px;
-  }
-}
+  .app-bar-reveal-area {
+    width: 100%;
+    height: 72px;
 
-.app-bar-sound-btn > svg {
-  width: 43px;
+    @media (min-width: $lg-min) {
+      height: 96px;
+    }
+  }
+
+  .app-bar-content {
+    width: 94%;
+    height: 48px;
+    padding: 0 3%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    position: absolute;
+
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.8) 0%,
+      #000000 116.67%
+    );
+    transition: all 0.3s
+      cubic-bezier(0.445, 0.05, 0.55, 0.95);
+
+    &.hidden {
+      top: -72px;
+    }
+
+    &.shown {
+      top: 0px;
+    }
+
+    @media (min-width: $lg-min) {
+      height: 72px;
+    }
+  }
 }
