--- a/src/components/tutorial/index.scss
+++ b/src/components/tutorial/index.scss
@@ -34,6 +34,10 @@
       font-size: 1.125rem;
     }
 
+    @media (min-width: $md-min) and (orientation: portrait) {
+      font-size: 1.8125rem;
+    }
+
     @media (min-width: $lg-min) {
       font-size: 2rem;
     }
@@ -61,7 +65,7 @@
     align-items: flex-end;
 
     .tutorial-stepper {
-      width: 100px;
+      width: 110px;
       height: 40px;
       margin-bottom: 2vh;
 
@@ -82,11 +86,21 @@
         position: relative;
 
         &.active {
-          transform: scale(1.25);
+          transform: scale(1.3);
           background: #c4c4c4;
         }
 
-        @media (min-width: $sm-min) {
+        @media (min-width: $sm-min) and (orientation: landscape) {
+          width: 14px;
+          height: 14px;
+        }
+
+        @media (min-width: $md-min) and (orientation: portrait) {
+          width: 14px;
+          height: 14px;
+        }
+
+        @media (min-width: $lg-min) {
           width: 16px;
           height: 16px;
         }
