--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -2,55 +2,44 @@
 
 .app-bar {
   width: 100%;
-  height: 48px;
 
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
-
-  @media (min-width: $lg-min) {
-    height: 72px;
-  }
+  touch-action: none;
 
   .app-bar-reveal-area {
     width: 100%;
     height: 72px;
-
-    @media (min-width: $lg-min) {
-      height: 96px;
-    }
+    touch-action: none;
   }
 
   .app-bar-content {
     width: 94%;
-    height: 48px;
     padding: 0 3%;
+    touch-action: none;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     position: absolute;
+    left: 0;
 
     background: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.8) 0%,
       #000000 116.67%
     );
-    transition: all 0.3s
-      cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  }
+}
 
-    &.hidden {
-      top: -72px;
-    }
+.app-bar,
+.app-bar .app-bar-content {
+  height: 48px;
 
-    &.shown {
-      top: 0px;
-    }
-
-    @media (min-width: $lg-min) {
-      height: 72px;
-    }
+  @media (min-width: $lg-min) {
+    height: 72px;
   }
 }
