--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -1,108 +1,90 @@
 @import '../../scss/variables.scss';
 
 .about {
-  width: 100vw;
-  height: 100vh;
-
-  background: #292929;
+  width: 100%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
-}
+  align-items: center;
 
-.about-title,
-.about-content {
-  width: 90%;
-  max-width: 1330px;
-  position: relative;
-  margin: 0 auto;
-}
-
-.about-title {
-  font-size: 3.75em;
-  margin-top: 40px;
-
-  // @media screen and (max-width: $sm-up) {
-  //   font-size: 1.875em;
-  //   margin-top: 18px;
-  //   text-align: center;
-  // }
-}
-
-.about-content {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  flex: 1;
-
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-rows: repeat(5, 76px);
-
-  // @media screen and (max-width: $sm-up) {
-  //   margin-top: 12px;
-  //   margin-bottom: 4px;
-  //   text-align: center;
-  //   grid-template-rows: repeat(4, 50px);
-  //   grid-template-columns: repeat(3, 1fr);
-  // }
-
-  // @media screen and (max-width: $xs-up) {
-  //   display: block;
-  //   margin-top: 20px;
-  // }
-}
-
-.about-content-item {
-  line-height: 1.5;
-  margin: 0;
-
-  // @media screen and (max-width: $xs-up) {
-  //   margin: 10px 0;
-  // }
-
-  .about-content-title,
-  .about-content-subtitle {
-    font-size: 1em;
-
-    // @media screen and (max-width: $sm-up) {
-    //   font-size: 0.625em;
-    //   line-height: 1.25;
-    // }
-
-    // @media screen and (max-width: $xs-up) {
-    //   font-size: 0.7em;
-    // }
+  .about-title,
+  .about-content {
+    width: 92%;
+    max-width: 1330px;
   }
 
-  .about-content-title.mide-text {
-    font-weight: 700;
+  .about-title {
+    font-size: 2rem;
+    text-align: center;
+
+    margin: 40px 0;
+
+    @media (min-width: $sm-min) and (orientation: landscape) {
+      margin: 18px 0;
+    }
+
+    @media (min-width: $lg-min) {
+      margin-top: 56px;
+      margin-bottom: 62px;
+      font-size: 3.75em;
+      text-align: initial;
+    }
   }
 
-  .about-content-subtitle.mide-text {
-    font-weight: 400;
+  .about-content {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    flex: 1;
+
+    margin-top: 8px;
+    margin-bottom: 0;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+
+    @media (min-width: $sm-min) and (orientation: landscape) {
+      display: grid;
+      margin-bottom: 4px;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about-content-item {
+      margin: 0;
+      margin-bottom: 18px;
+
+      .about-content-title,
+      .about-content-subtitle {
+        font-size: 0.75rem;
+        line-height: 0.875rem;
+      }
+
+      .about-content-title {
+        font-weight: 700;
+      }
+
+      .about-content-subtitle {
+        font-weight: 400;
+      }
+    }
   }
-}
 
-.about-content-logo {
-  height: 71px;
-  margin-top: 30px;
+  .about-content-logo {
+    width: 100%;
+    height: 15.625vh;
 
-  > img {
-    width: auto;
-    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    > svg {
+      width: 30%;
+      height: auto;
+
+      @media (min-width: $sm-min) and (orientation: landscape) {
+        width: 14%;
+      }
+    }
   }
-
-  // @media screen and (max-width: $sm-up) {
-  //   height: 30px;
-  //   margin: 0;
-  //   position: absolute;
-  //   top: 80%;
-  //   left: 50%;
-  //   transform: translate(-50%, 0);
-  // }
-
-  // @media screen and (max-width: $xs-up) {
-  //   height: 38px;
-  //   top: 86%;
-  // }
 }
