--- a/src/components/tutorial/index.scss
+++ b/src/components/tutorial/index.scss
@@ -63,21 +63,16 @@
       width: 62%;
       text-align: center;
       font-size: 1rem;
-      line-height: 20px;
+      line-height: 1.25rem;
+      margin: 0;
 
-      @media (max-width: $md-max) and (orientation: landscape) {
+      @media (min-width: $sm-min) and (orientation: landscape) {
         width: 36%;
-      }
-
-      @media (min-width: $sm-min) {
-        width: 36%;
-        font-size: 1.125rem;
       }
 
       @media (min-width: $lg-min) {
-        width: 36%;
-        font-size: 1.875rem;
-        line-height: 38px;
+        font-size: 2rem;
+        line-height: 2.375rem;
       }
     }
   }
