--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -361,3 +361,8 @@ template {
 [hidden] {
   display: none;
 }
+
+@font-face {
+  font-family: 'ComicMarkerDeluxe';
+  src: url(../fonts/ComicMarkerDeluxe.otf);
+}
